--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     </head>
     <body>
 
-        <h1>nothing really matters that much but ok</h1>
+        <h1>HALLOUMI, GUYS</h1>
         {{{body}}}
     </body>
 </html>
