--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,33 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
 body {
   background: DeepPink;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+form {
+}
+input {
+}
+
+canvas {
+  background: white;
+}
+button {
+  position: relative;
+  display: inline-block;
+  font-size: 22px;
+  padding: 20px 60px;
+  color: rebeccapurple;
+  margin: 20px 10px 10px;
+  border-radius: 6px;
+  text-align: center;
+  transition: top 0.01s linear;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
