--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,5 +9,7 @@
 
         <h1>HALLOUMI, GUYS</h1>
         {{{body}}}
+        <script type="text/javascript" src="/script.js"></script>
+
     </body>
 </html>
