--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -4,8 +4,8 @@
 <form >
     <input type="text" name="First Name" value="First Name">
     <input type="text" name="Last Name" value="Last Name">
-    <input type="hidden">
+    <input type="hidden" id="signInput">
     <canvas id="canvas" width="400" height="150"></canvas>
-    <button type="button" name="button">sign</button>
+    <button type="button" id="sign">sign</button>
 
 </form>
