Working on part 3, part 1 and 2 completed!

--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,2 +1,11 @@
 <h3>all these girls also support the same as you do</h3>
+
+{{#nameList}}
+
+
+    <p>{{firstname}} {{lastname}}</p>
+
+
+{{/nameList}}
+
 <h1>LOL</h1>
