--- a/public/style.css
+++ b/public/style.css
@@ -31,3 +31,14 @@ button {
   transition: top 0.01s linear;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
 }
+
+h2 {
+  color: blue;
+}
+
+#signImg {
+  width: 400px;
+  height: 150px;
+  position: relative;
+  left: 40%;
+}
