--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,11 +1,21 @@
 <h1>nothing really matters that much but ok</h1>
 <p>this describes my petition</p>
 
-<form >
-    <input type="text" name="First Name" value="First Name">
-    <input type="text" name="Last Name" value="Last Name">
-    <input type="hidden" id="signInput">
+
+
+{{#error}}
+
+ <h2> INPUT MISSING </h2>
+
+{{/error}}
+
+<form method= "POST">
+
+    <input type="text" name="firstName" value={{firstName}}>
+    <input type="text" name="lastName" value={{lastName}}>
+    <input type="hidden" name= "signature" id="signInput">
     <canvas id="canvas" width="400" height="150"></canvas>
-    <button type="button" id="sign">sign</button>
+    <input name='_csrf' type='hidden' value='{{csrfToken}}'>
+    <button type="submit" id="sign">sign</button>
 
 </form>
