--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,2 +1,11 @@
 <h2>danke guys</h2>
+
+{{#signImg}}
+
+<img src={{signature}} alt="" id="signImg">
+
+{{/signImg}}
+
+
+
 <p>like literally thank u guys u are so cute danka danka danka</p>
