--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,5 +1,5 @@
 <h2>please register</h2>
-
+<!--Conditional Rendering -->
 {{#if somethingWrong}}
 
 <h2 class="error"> Ooops! something went wrong! </h2>
