--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,20 @@
-<h2>Pleas log in</h2>
+<h2>Please log in</h2>
+<!--Conditional Rendering -->
+{{#if somethingWrong}}
+
+<h2 class="error"> Ooops! something went wrong! </h2>
+
+{{/if}}
+
 
 <form method="POST">
 
-    <input type="text" name="" value="">
-    <input type="text" name="" value="">
+    <input type="text" name="eMail" placeholder="e-mail" value="">
+
+    <input type="text" name="password" placeholder="password" value="">
+
+    <input name='_csrf' type='hidden' value='{{csrfToken}}'>
+
 
     <button type="submit"> LOG IN </button>
-
-</form>
+    </form>
