almost done with part 4

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -10,6 +10,7 @@
 
     <input type="text" name="" value="" placeholder="age">
     <input type="text" name="" value="" placeholder="city">
+    <!-- type url makes sure it is an url that's been given-->
     <input type="url" name="" value="" placeholder="homepage">
 
 </form>
