--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,6 +1,4 @@
-<h1>nothing really matters that much but ok</h1>
-<p>this describes my petition</p>
-
+<h2>Please use your mouse to sign now on the field</h2>
 
 
 {{#error}}
