--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -12,5 +12,9 @@
     <input type="text" name="" value="" placeholder="city">
     <!-- type url makes sure it is an url that's been given-->
     <input type="url" name="" value="" placeholder="homepage">
+    <input name='_csrf' type='hidden' value='{{csrfToken}}'>
+
+    <button type="submit">Go</button>
+
 
 </form>
