--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Petition</title>
+        <link href="https://fonts.googleapis.com/css?family=Quantico" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
     </head>
     <body>
+        <div id="bg">
 
-        <h1>HALLOUMI, GUYS</h1>
+        <img src="http://quickhoney.com/image/BPix-Skalitzer-2_ani2_1?fbclid=IwAR0bkuVE9EjzP3kO4Tg6rWAgLhzC1Y1q0YNsuYKxKhyE-2bnHFRyul23U-w" width="100%" height="275">
+    </div>
+
+        <h1>Ban cars.</h1>
+        <h3 id='description'>Cars suck. Car drivers suck. <br> Cars affect the environment. Cars create accidents. <br> Join this petition and enjoy a Berlin free of smoke, assholes... <br> and full of happy bikers.</h3>
         {{{body}}}
         <script type="text/javascript" src="/script.js"></script>
+
+
 
     </body>
 </html>
