halfway through part 5/ buggie detected

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -8,10 +8,10 @@
 
 <form method="POST">
 
-    <input type="text" name="" value="" placeholder="age">
-    <input type="text" name="" value="" placeholder="city">
+    <input type="text" name="age" value="" placeholder="age">
+    <input type="text" name="city" value="" placeholder="city">
     <!-- type url makes sure it is an url that's been given-->
-    <input type="url" name="" value="" placeholder="homepage">
+    <input type="url" name="url" value="" placeholder="homepage">
     <input name='_csrf' type='hidden' value='{{csrfToken}}'>
 
     <button type="submit">Go</button>
