--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,3 +1,7 @@
+
+
+<h3 id='description'>Cars suck. Car drivers suck. <br> Cars affect the environment. Cars create accidents. <br> Join this petition and enjoy a Berlin free of smoke, assholes... <br> and full of happy bikers.</h3>
+
 <h2>please register</h2>
 <!--Conditional Rendering -->
 {{#if somethingWrong}}
