--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -3,9 +3,7 @@
 {{#nameList}}
 
 
-    <p>{{firstname}} {{lastname}}</p>
+    <p>{{firstname}}  {{lastname}} {{age}} <a href="/signers/{{city}}">{{city}}</a></p>
 
 
 {{/nameList}}
-
-<h1>LOL</h1>
