--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -2,18 +2,22 @@
 
     <h3>Here you can edit your profile</h3>
 
+    {{#if somethingWrong}}
+    <h2 class="error"> Ooops! something went wrong! </h2>
+    {{/if}}
+
     <form method="POST">
 
 
 
 
-            <input type="text" name="firstname" placeholder="firstname" value = {{firstName}}>
-            <input type="text" name="lastname" placeholder="lastname" value = {{lastName}}>
+            <input type="text" name="firstname" placeholder="firstname" value = {{firstname}}>
+            <input type="text" name="lastname" placeholder="lastname" value = {{lastname}}>
             <input type="email" name="email" placeholder="email" required value = {{email}}>
             <input type="password" name="password" placeholder="password">
-            <input type="age" name="age" placeholder="Age" value = {{age}}>
+            <input type="age" name="age" placeholder="age" value = {{age}}>
             <input type="city" name="city" placeholder="City" value = {{city}}>
-            <input type="url" name="url" placeholder="Website" value = {{url}}>
+            <input type="url" name="url" placeholder="homepage" value = {{url}}>
             <input type= "hidden" name="_csrf" value="{{csrfToken}}">
             <button>SUBMIT</button>
 
