fixed getSig bug/ last css details tomorrow morning

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
 
     <input type="text" name="eMail" placeholder="e-mail" value="">
 
-    <input type="text" name="password" placeholder="password" value="">
+    <input type="password" name="password" placeholder="password" value="">
 
     <input name='_csrf' type='hidden' value='{{csrfToken}}'>
 
