--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -19,7 +19,7 @@
 
 <input type="text" name="eMail" placeholder="e-mail" value="">
 
-<input type="text" name="password" placeholder="password" value="">
+<input type="password" name="password" placeholder="password" value="">
 
 <input name='_csrf' type='hidden' value='{{csrfToken}}'>
 
