--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,20 +1,22 @@
-<h1>Profile</h1>
+<p><b> <span style="background-color:white">PROFILE. </span> </b></p>
+
 
 {{#if somethingWrong}}
 
 <h2 class="error"> Ooops! something went wrong! </h2>
 
 {{/if}}
+<h2>[this is optional, but c'mon]</h2>
 
 <form method="POST">
 
-    <input type="text" name="age" value="" placeholder="age">
-    <input type="text" name="city" value="" placeholder="city">
+    <input type="text" name="age" value="" placeholder="age"> <br> <br>
+    <input type="text" name="city" value="" placeholder="city"> <br> <br>
     <!-- type url makes sure it is an url that's been given-->
-    <input type="url" name="url" value="" placeholder="homepage">
+    <input type="url" name="url" value="" placeholder="homepage"> <br>
     <input name='_csrf' type='hidden' value='{{csrfToken}}'>
 
-    <button type="submit">Go</button>
+    <button type="submit">GO</button>
 
 
 </form>
