--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -2,7 +2,7 @@
 
 <h3 id='description'>Cars suck. Car drivers suck. <br> Cars affect the environment. Cars create accidents. <br> Join this petition and enjoy a Berlin free of smoke, assholes... <br> and full of happy bikers.</h3>
 
-<h2>please register</h2>
+<h2>You need to register first</h2>
 <!--Conditional Rendering -->
 {{#if somethingWrong}}
 
@@ -22,7 +22,7 @@
 <input type="password" name="password" placeholder="password" value="">
 
 <input name='_csrf' type='hidden' value='{{csrfToken}}'>
-
-<button type="submit">SIGN UP</button>
+<br>
+<button type="submit">REGISTER</button>
 </form>
 <p class="offer-login">Already member? Please <a href="/login">Log In </a></p>
