--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,4 +1,5 @@
-<h3>all these girls also support the same as you do</h3>
+<br>
+<p><b> <span style="background-color:white">Dear cars, we nicely invite you to piss off and make Berlin a nicer place. </span> </b></p>
 
 {{#nameList}}
 
