--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,4 +1,4 @@
-<h2>danke guys</h2>
+<h2>danke </h2>
 
 {{#signImg}}
 
@@ -7,7 +7,7 @@
 {{/signImg}}
 
 <p> All
-         <a href="/thankyou/signees">
+         <a href="/signers">
              these people
          </a>
 also hate cars.     </p>
@@ -18,9 +18,10 @@ also hate cars.     </p>
          </a>
      </p>
 
- <div id="deleteSig">
+<p>If you change your mind, click "unsign" below and never come back.</p>
     <form method="POST">
-        <button name="button">Or you can change your mind.</button>
+        <button name="button">UNSIGN</button>
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
     </form>
-</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<a class="h" id="logout" href="/logout">LOGOUT</a>
