--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,4 +1,4 @@
-<h2>Please use your mouse to sign now on the field</h2>
+<h2>Please use your mouse to sign on the field</h2>
 
 
 {{#error}}
@@ -14,7 +14,7 @@
     <input type="text" name="lastName" value={{lastName}}> -->
     <input type="hidden" name= "signature" id="signInput">
     <canvas id="canvas" width="400" height="150"></canvas>
-    <input name='_csrf' type='hidden' value='{{csrfToken}}'>
+    <input name='_csrf' type='hidden' value='{{csrfToken}}'> <br>
     <button type="submit" id="sign">sign</button>
 
 </form>
